# reach_plugin_example

./: CMakeLists.txt  Dockerfile  README.md  package.xml
src/: evaluator.cpp  evaluator.hpp  factory.cpp  plugin.cpp
